Prepare to push to master

--- a/index.html
+++ b/index.html
@@ -1,32 +1,18 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Day 2 Demo</title>
+    <title>Lab 02</title>
     <link href="./css/style.css" type="text/css" rel="stylesheet" />
-
-    <style>
-      p {
-        color: cyan;
-      }
-
-      * {
-        background-color: azure;
-        outline: 2px #201d57 dotted;
-        color: red;
-      }
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Bungee+Shade|Pacifico&display=swap" rel="stylesheet">  
   </head>
   <body>
-    <header></header>
+    <header>Lab 02: About Me, with a guessing game</header>
 
     <main>
-      <h1>This is the second Demo</h1>
-      <p class="mars">This is the first paragraph</p>
-      <p class="mars" id="jupiter">Here is some content</p>
-      <p class="mars">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quam cupiditate facilis modi earum dolorem ipsam, harum labore at ea omnis quibusdam quia quidem recusandae veritatis maiores itaque, ut alias!</p>
+      <h1>Class 2 Lab</h1>
     </main>
 
-    <footer></footer>
+    <footer>Created by: <span>Matt Stuhring</span></footer>
 
     <script src="./js/app.js"></script>
   </body>
