Minor html comment fixes

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </ul>
         </li>
 
-        <!-- Australia -->
+        <!-- Australia? -->
         <li class="australia">Have I been to Australia?
           <ul>
             <li>Response: ?</li>
@@ -60,7 +60,7 @@
           </ul>
         </li>
 
-        <!-- JavaScript -->
+        <!-- JavaScript? -->
         <li class="javascript">Do I have a background in JavaScript?
           <ul>
             <li>Response: ?</li>
@@ -94,8 +94,8 @@
       </ol>
     </section>
 
+    <!-- Display user score -->
     <section class="section-score">
-      <!-- Display user score -->
       <p>You got ? out of ? correct!</p>
     </section>
 
