Added more styling to lab 03

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
     <!-- Top Ten ... -->
     <section class="section-top-ten">
-      <h2>Top Ten - Countries I want to visit</h2>
-
+      <h2>Top Ten</h2>
+      <h3>Countries I want to visit!</h3>
       <ol>
         <li>Spain</li>
         <li>England</li>
@@ -34,7 +34,7 @@
 
     <!-- Guessing Games -->
     <section class="section-games">
-      <h2>Guessing Game - Were you correct?</h2>
+      <h2>Guessing Game</h2>
       <ol>
         <!-- Seattlite? -->
         <li class="seattle">Am I a native Seattlite?
