--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </li>
 
         <!-- JavaScript? -->
-        <li class="javascript">Do I have a background in JavaScript?
+        <li class="java">Do I have a background in Java?
           <ul>
             <li>Response: ?</li>
             <li>Answer: Yes</li>
