--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
   </head>
   <body>
     <!-- Header -->
-    <header>Lab 03: <span>Extends About Me & Guessing Game</span></header>
+    <header>Lab 03: <span>About Me</span></header>
 
     <!-- Title -->
     <main>
-      <h1>Class 3 Lab</h1>
+      <div class="introduction">
+        <h2>Hello<br>I'm Matt</h2>
+      </div>
+
+      <div class="profile-pic">
+        <img src="./img/matt.jpg" alt="Picture of Matt">
+      </div>
     </main>
 
     <!-- Top Ten ... -->
@@ -102,6 +108,6 @@
     <!-- Footer -->
     <footer>Created by: <span>Matt Stuhring</span></footer>
 
-    <script src="./js/app.js"></script>
+    <!-- <script src="./js/app.js"></script> -->
   </body>
 </html>
