Fixed portfolio url

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- Links to my resources -->
         <span class="resources">
-          <a href="https://www.mattstuhring.com" target="_blank">Portfolio</a>
+          <a href="https://mattstuhring.herokuapp.com/" target="_blank">Portfolio</a>
           <a href="https://www.linkedin.com/in/mattstuhring/" target="_blank">LinkedIn</a>
           <a href="https://github.com/mattstuhring" target="_blank">Github</a>
         </span>
